<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_settings"
        tools:context="com.example.fibredamage.Settings">

    <TextView
            android:text="@string/darkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settingDarkMode" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp" android:layout_marginTop="43dp"/>
    <TextView
            android:text="@string/encryptPDF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settingEncryptPDF" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp" android:layout_marginTop="86dp"/>
    <TextView
            android:text="@string/sendCopyToEng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settingSendCopyToEng" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp" android:layout_marginTop="126dp"/>
    <TextView
            android:text="@string/sendCopyToLineManager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settingSendCopyToManager" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp" android:layout_marginTop="166dp"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch1" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settingDarkMode"
            android:layout_marginLeft="210dp" android:layout_marginStart="210dp" android:layout_marginTop="40dp"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settingDarkMode"
            android:layout_marginLeft="210dp" android:layout_marginStart="210dp" android:layout_marginTop="80dp"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch4" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settingDarkMode"
            android:layout_marginLeft="210dp" android:layout_marginStart="210dp" android:layout_marginTop="120dp"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch5" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settingDarkMode"
            android:layout_marginLeft="210dp" android:layout_marginStart="210dp" android:layout_marginTop="160dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/lineManagerEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingSendCopyToManager" android:layout_marginTop="20dp"
            android:layout_marginLeft="38dp" android:layout_marginStart="38dp" android:hint="@string/lineManagerEmail"
            android:enabled="false"/>
    <RadioGroup
            android:layout_width="356dp"
            android:layout_height="112dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/settingSendCopyToEng"
            android:layout_marginTop="10dp" android:id="@+id/radioGroup"/>
</androidx.constraintlayout.widget.ConstraintLayout>
