<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity" tools:layout_editor_absoluteY="81dp">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textEmailAddress"
            android:ems="10"
            android:id="@+id/engineerEmail"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="556dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:hint="@string/engineerEmail" android:layout_marginTop="10dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/engineerName"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="492dp"
            app:layout_constraintStart_toStartOf="@+id/engineerEmail"
            app:layout_constraintTop_toBottomOf="@+id/engineerEmail"
            android:hint="@string/engineerName"/>
    <Button
            android:text="@string/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2" android:layout_marginLeft="48dp" android:layout_marginStart="48dp"
            app:layout_constraintStart_toEndOf="@+id/engineerName"
            app:layout_constraintBaseline_toBaselineOf="@+id/engineerName" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp" android:onClick="checkFields"/>
    <ImageView
            android:layout_width="73dp"
            android:layout_height="73dp" app:srcCompat="@drawable/ic_launcher_foreground"
            android:id="@+id/imageView2"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/engineerDescription" android:longClickable="false"/>
    <ImageView
            android:layout_width="73dp"
            android:layout_height="73dp" app:srcCompat="@drawable/ic_launcher_foreground"
            android:id="@+id/imageView3"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/engineerDescription"/>
    <ImageView
            android:layout_width="73dp"
            android:layout_height="73dp" app:srcCompat="@drawable/ic_launcher_foreground"
            android:id="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView3" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/engineerDescription" android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>
    <ImageView
            android:layout_width="73dp"
            android:layout_height="73dp" app:srcCompat="@drawable/ic_launcher_foreground"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="30dp" android:layout_marginStart="30dp" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/engineerDescription" android:onClick="selectPhoto"/>
    <EditText
            android:layout_width="366dp"
            android:layout_height="106dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/address"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:hint="@string/dmg_address" app:layout_constraintTop_toBottomOf="@+id/engineerName"
            android:layout_marginTop="70dp"/>
    <EditText
            android:layout_width="365dp"
            android:layout_height="132dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/engineerDescription"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="@+id/address" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="23dp" android:layout_marginStart="23dp" android:hint="@string/edit_message"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/spinner" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/address" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button2" android:spinnerMode="dropdown"
            android:entries="@array/itemsArray" android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>